# ThorsDB

./: .gitignore  .gitmodules  .travis.yml  COPYRIGHT  Exceptions  Makefile  Makefile.config.in  Makefile.extra.in  README.md  config.h.in  configure  configure.ac  localconfig.h.in  uploadcodecovrage
.github/workflows/: build.yml
doc/: building.md  example1.cpp  example1.md  example2.md  internal.md  objective.md  usage.md
docSource/: config.json
docSource/source/group/: intro.md
docSource/source/package/: ThorMySQL.md  ThorPostgres.md  ThorSQL.md
docs/: index.html
init/: mysql.test.db  postgress.test.db
src/: Makefile  ThorsIOUtil  ThorsLogging
src/Mongo/: .gitignore  AdmCmdListDatabases.h  BaseCmd.cpp  BaseCmd.h  BaseCmd.tpp  CmdAdmListDatabases.h  CmdAdm_Auth.cpp  CmdAdm_Auth.h  CmdAdm_Compact.h  CmdAdm_Create.h  CmdAdm_CreateIndex.h  CmdAdm_Drop.h  CmdAdm_DropIndex.h  CmdAdm_ListCollections.h  CmdAdm_ListDataBases.h  CmdAdm_ListIndexes.h  CmdAdm_Logout.h  CmdAdm_Query.h  CmdAdm_Query.tpp  CmdAdm_Reply.h  CmdAdm_Reply.tpp  CmdDB.cpp  CmdDB.h  CmdDB.tpp  CmdDB_Delete.cpp  CmdDB_Delete.h  CmdDB_Delete.tpp  CmdDB_Find.cpp  CmdDB_Find.h  CmdDB_Find.tpp  CmdDB_FindCommon.h  CmdDB_FindModify.cpp  CmdDB_FindModify.h  CmdDB_FindModify.tpp  CmdDB_GetLastError.cpp  CmdDB_GetLastError.h  CmdDB_GetMore.cpp  CmdDB_GetMore.h  CmdDB_GetMore.tpp  CmdDB_Insert.cpp  (+55 more)
src/Mongo/test/: CmdAdmTest.cpp  CmdDBTest.cpp  CmdDBTest.h  CmdDB_DeleteTest.cpp  CmdDB_FindModifyTest.cpp  CmdDB_FindTest.cpp  CmdDB_GetLastErrorTest.cpp  CmdDB_GetMoreTest.cpp  CmdDB_InsertTest.cpp  CommonInsertTest.h  ConnectionTest.cpp  DefaultMongoConnectionTest.cpp  HandShakeTest.cpp  Logging.cpp  MongoConnectTest.cpp  MongoConnectionTest.cpp  MsgHeaderTest.cpp  Msg_InsertTest.cpp  OpTest.cpp  OpTest.h  Op_DeleteTest.cpp  Op_GetMoreTest.cpp  Op_InsertTest.cpp  Op_KillCursorsTest.cpp  Op_MsgHeaderTest.cpp  Op_MsgTest.cpp  Op_MsgTest.h  Op_QueryHandShakeTest.cpp  Op_QueryTest.cpp  Op_ReplyHandshakeTest.cpp  Op_ReplyTest.cpp  Op_UpdateTest.cpp  UnitTestWithConnection.cpp  UnitTestWithConnection.h  UtilCRCTest.cpp
src/Mongo/test/data/: CompCRCTest-Read
src/MySQL/: .gitignore  Authentication.cpp  Authentication.h  BindBuffer.cpp  BindBuffer.h  BindBuffer.tpp  ConectReader.cpp  ConectReader.h  ConectReader.tpp  ConectWriter.cpp  ConectWriter.h  ConectWriter.tpp  Connection.cpp  Connection.h  Connection.tpp  ConnectionDefault.h  DefaultMySQLConnection.cpp  DefaultMySQLConnection.h  Makefile  MySQL.cpp  MySQLConfig.h.in  MySQLConnection.cpp  MySQLConnection.h  MySQLStream.cpp  MySQLStream.h  MySQLTimeBag.h  MySQLUtil.h  PackageBuffer.cpp  PackageBuffer.h  PackageBuffer.tpp  PackageConReader.cpp  PackageConReader.h  PackageConReader.tpp  PackageConWriter.cpp  PackageConWriter.h  PackageConWriter.tpp  PackageReader.cpp  PackageReader.h  PackageReader.tpp  PackageRequ.h  (+51 more)
src/MySQL/test/: 1  A  A2  AuthenticationTest.cpp  BindParametersCharTest.cpp  BindParametersIntTest.cpp  BindParametersLongLongTest.cpp  BindParametersLongTest.cpp  BindParametersReadTest.cpp  BindParametersRealTest.cpp  BindParametersShortTest.cpp  BindParametersStringTest.cpp  BindParametersTimeTest.cpp  BindParametersVectorTest.cpp  ConectReaderTest.cpp  ConectWriterTest.cpp  ConnectionTest.cpp  CornerCaseTest.cpp  InsertTableTest.cpp  IntTableTest.cpp  MockStream.h  MySQLConnectionTest.cpp  PackageBuffferTest.cpp  PackageStreamTest.cpp  PrepareStatement.cpp  PrepareStatementBindFailureTest.cpp  PrepareStatementLambdaFailureTest.cpp  PrepareStatementPrinterTest.cpp  PrepareStatementTest.cpp  RequPackageAuthSwitchResponseTest.cpp  RequPackageHandShakeResponseTest.cpp  RespPackageAuthSwitchRequestTest.cpp  RespPackageColumnDefinitionTest.cpp  RespPackageEOFTest.cpp  RespPackageERRTest.cpp  RespPackageHandShakeTest.cpp  RespPackageOKTest.cpp  RespPackageTest.cpp  SQLConnectionTest.cpp  SSLConnectionTest.cpp  (+20 more)
src/MySQL/test/data/: data.sql  init.sql  init.travis.sql  reset.sql
src/MySQL/test/script/: deletePeopleExtra  deleteTestSetUp  deleteTestTearDown  insertTestSetUp  insertTestTearDown  updateTestSetUp  updateTestTearDown
src/Postgres/: .gitignore  ConectReader.cpp  ConectReader.h  ConectReader.tpp  ConectWriter.cpp  ConectWriter.h  ConectWriter.tpp  Connection.cpp  Connection.h  DefaultPostGConnection.cpp  DefaultPostGConnection.h  Makefile  Messages.h  PackageBuffer.cpp  PackageBuffer.h  Postgres.cpp  PostgresConfig.h.in  PostgresStream.h  PrepareStatement.cpp  PrepareStatement.h  ReadMe.md  Statement.cpp  Statement.h
src/Postgres/test/: ConectReaderTest.cpp  ConectWriterTest.cpp  ConnectionSimulationErrorTest.cpp  ConnectionSimulationTest.cpp  ConnectionTest.cpp  MockStream.h  PackageBuffferTest.cpp  PostgresTest.cpp
src/Postgres/test/data/: init.sql
src/SQL/: .gitignore  Connection.cpp  Connection.h  Endian.h  MD5.cpp  MD5.h  Makefile  SQLConfig.h.in  SQLUtil.h  SSLUtil.cpp  SSLUtil.h  Statement.cpp  Statement.h  Statement.tpp  StreamInterface.h  StreamSimple.cpp  StreamSimple.h
src/SQL/test/: ConnectionTest.cpp  MD5Test.cpp  Mock.def  MockMysql.h  MockSQL.h  SQLUtilTest.cpp  SetGoodToTrue.h  StatementTest.cpp  StreamSimpleTest.cpp
src/SQL/test/data/: key.pem
src/ThorsDB/: .gitignore  Connection.cpp  Connection.h  Makefile  SQLUtil.h  SSLUtil.h  Statement.cpp  Statement.h  Statement.tpp  StreamInterface.h  StreamSimple.h
src/ThorsDB/test/: ConnectionTest.cpp  MD5Test.cpp  MockSQL.h  SetGoodToTrue.h  StatementTest.cpp
src/ThorsDB/test/data/: cert.pem
src/ThorsDBBuild/: Makefile
src/ThorsDBBuildTest/: Makefile
src/ThorsDBBuildTest/test/: MySQLTest.cpp
src/ThorsDBCommon/: Makefile  SSLUtil.cpp  SSLUtil.h  StreamInterface.h  StreamSimple.cpp  StreamSimple.h
src/ThorsDBCommon/test/: Logging.cpp  Mock.def  StreamSimpleTest.cpp
